# task-manager-agent

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Progress.md  README.md  pyproject.toml  tmp_add_task.py  tmp_check.py
.claude/: settings.local.json
.github/workflows/: task-mcp-ci.yml
docs/: architecture.excalidraw
docs/adrs/: agent-decision.md
services/task-manager-agent/: pyproject.toml
services/task-manager-agent/src/task_manager_agent/: main.py  sandbox_agent.py
services/task-mcp/: .dockerignore  Dockerfile  README.md
services/task-mcp/src/task_manager_mcp/: models.py  store.py
services/task-mcp/src/task_manager_mcp/tools/: modify.py  review.py
spec/agents/: sandbox-agent-spec.md
spec/mcp/implementation/: launch-spec.md  plan.md
spec/mcp/roadmap/: evolution-phases.md
spec/mcp/testing/: connection-testing.md
spec/mcp/tools/: human-intent-based-tools.md
spec/mcp/transport/: streamable-http-architecture.md
task_manager_mcp/: pyproject.toml
task_manager_mcp/src/task_manager_mcp/: server.py
task_manager_mcp/src/task_manager_mcp/tools/: capture.py  remove.py  resolve.py
