[project]
name = "task-manager-agent"
version = "0.0.1"
description = "A multi-agent task management system using OpenAI Agents SDK and FastAPI."
readme = "README.md"
requires-python = "==3.12.2"
dependencies = [
    "openai-agents>=0.0.1",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "task_manager_mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_manager_agent"]
