[project]
name = "task-manager-mcp"
version = "0.1.0"
description = "MCP server for task management — 5 intent-based tools (capture, review, modify, resolve, remove)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_manager_mcp"]
